fix: test on new default model

--- a/RNN-6-Activation-Function.ipynb
+++ b/RNN-6-Activation-Function.ipynb
@@ -67,26 +67,14 @@
    },
    "source": [
     "# Construct a tf.data.Dataset\n",
-    "data = pd.read_csv('training.1600000.processed.noemoticon.csv',encoding='latin', names = ['polarity','id','date','query','user','text'])"
+    "data = pd.read_csv('training.1600000.processed.noemoticon.csv',encoding='latin', names = ['polarity','id','date','query','user','text'])\n",
+    "# Random shuffling of data, select the first 200,000\n",
+    "data = data.sample(frac=1,random_state=740)\n",
+    "data = data[:20000]\n",
+    "data.head(10)"
    ],
    "outputs": [],
    "execution_count": 119
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-22T19:59:05.882045Z",
-     "start_time": "2025-03-22T19:59:05.665579Z"
-    }
-   },
-   "source": [
-    "# Random shuffling of data, select the first 200,000\n",
-    "data = data.sample(frac=1)\n",
-    "data = data[:20000]"
-   ],
-   "outputs": [],
-   "execution_count": 120
   },
   {
    "metadata": {},
@@ -975,38 +963,46 @@
    "source": [
     "urlPattern = r\"((http://)[^ ]*|(https://)[^ ]*|( www\\.)[^ ]*)\"\n",
     "userPattern = '@[^\\s]+'\n",
-    "def process_tweets(tweet):\n",
-    "  # Lower Casing\n",
+    "def process_tweets_negation_handling_fix(tweet):\n",
+    "    # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    #tweet=tweet[1:]\n",
     "    # Removing all URls\n",
     "    tweet = re.sub(urlPattern,'',tweet)\n",
     "    # Removing all @username.\n",
     "    tweet = re.sub(userPattern,'', tweet)\n",
-    "    #Remove punctuations\n",
-    "    tweet = tweet.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
+    "    # 移除非字母数字、空格和'的字符\n",
+    "    tweet = re.sub(r\"[^\\w\\s']\", '', tweet)\n",
+    "    # --- 特殊否定缩写处理 ---\n",
+    "    # 1. 明确处理 can't → cannot\n",
+    "    tweet = re.sub(r\"\\bcan't\\b\", \"cannot\", tweet)\n",
+    "    # 2. 处理 won't → will not\n",
+    "    tweet = re.sub(r\"\\bwon't\\b\", \"will not\", tweet)\n",
+    "    # 3. 处理 shan't → shall not\n",
+    "    tweet = re.sub(r\"\\bshan't\\b\", \"shall not\", tweet)\n",
+    "    # 4. 处理 ain't → is not\n",
+    "    tweet = re.sub(r\"\\bain't\\b\", \"is not\", tweet)\n",
+    "    # --- 通用n't处理 ---\n",
+    "    # 将剩余n't替换为 not（如didn't → did not）\n",
+    "    tweet = re.sub(r\"n't\\b\", \" not\", tweet)\n",
+    "    # --- 处理其他撇号为空格（如I'll → I ll）---\n",
+    "    tweet = re.sub(r\"'\", ' ', tweet)\n",
+    "\n",
     "    #tokenizing words\n",
     "    tokens = word_tokenize(tweet)\n",
-    "    #Removing Stop Words\n",
-    "    #final_tokens = [w for w in tokens if w not in stopword]\n",
+    "    # Remove punctuations but remain ‘n't’\n",
     "    final_tokens = tokens\n",
     "    #reducing a word to its word stem\n",
     "    wordLemm = WordNetLemmatizer()\n",
     "    finalwords=[]\n",
-    "    negation_words = {\"not\", \"no\", \"never\", \"n't\"}\n",
-    "    prev_neg = False\n",
     "\n",
-    "    for w in final_tokens:\n",
-    "      if len(w)>1:\n",
-    "        word = wordLemm.lemmatize(w)\n",
-    "        #finalwords.append(word)\n",
-    "        if word in negation_words:\n",
-    "          prev_neg = True\n",
-    "        elif prev_neg:\n",
-    "          finalwords.append(\"not_\" + word)\n",
-    "          prev_neg = False\n",
-    "        else:\n",
-    "          finalwords.append(word)\n",
+    "    for w in tokens:\n",
+    "        if len(w) > 1:\n",
+    "            # 动词词性还原（解决 does→doe 问题）\n",
+    "            word = wordLemm.lemmatize(w, pos='v')\n",
+    "            # 名词词性还原（根据任务需求）\n",
+    "            word = wordLemm.lemmatize(word, pos='n')\n",
+    "            finalwords.append(word)\n",
     "    return ' '.join(finalwords)"
    ],
    "outputs": [],
@@ -1021,7 +1017,7 @@
    },
    "cell_type": "code",
    "source": [
-    "data['processed_tweets'] = data['text'].apply(lambda x: process_tweets(x))\n",
+    "data['processed_tweets'] = data['text'].apply(lambda x: process_tweets_negation_handling_fix(x))\n",
     "print('Text Preprocessing complete.')"
    ],
    "outputs": [
@@ -1197,6 +1193,7 @@
     "from keras import regularizers\n",
     "from keras import backend as K\n",
     "from keras.callbacks import ModelCheckpoint\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "from keras.layers import Dense, Embedding, LSTM, Dropout, BatchNormalization, LeakyReLU"
    ],
    "outputs": [],
@@ -1217,21 +1214,16 @@
    "cell_type": "code",
    "source": [
     "num_epochs = 10\n",
-    "results = {}\n",
-    "params_history = {}\n",
-    "# Define the maximum length of each sequence (number of words per tweet)\n",
     "max_len = 200\n",
-    "\n",
-    "# hidden layer\n",
-    "hidden_units = 8\n",
-    "\n",
-    "# LSTM layer\n",
+    "hidden_units = 4\n",
     "LSTM_units = 32\n",
-    "\n",
-    "# Embedding layer\n",
-    "# Define the 5000 most common words\n",
     "max_words = 5000\n",
     "embedding_dim = 64\n",
+    "learning_rate = 0.001\n",
+    "dropout = 0.0\n",
+    "\n",
+    "results = {}\n",
+    "params_history = {}\n",
     "\n",
     "# 激活函数组合\n",
     "# 自定义 Sign Function\n",
@@ -1239,7 +1231,7 @@
     "def sign_activation(x):\n",
     "    return K.sign(x)\n",
     "\n",
-    "hidden_activations = {'ReLU': 'relu', 'LeakyReLU': layers.LeakyReLU(), 'ELU': 'elu', 'ReLU+BatchNorm': 'relu'}\n",
+    "hidden_activations = {'ReLU': 'relu', 'LeakyReLU': layers.LeakyReLU(), 'ELU': 'elu'}\n",
     "output_activations = {'Sign Function': sign_activation, 'Sigmoid': 'sigmoid', 'Tanh': 'tanh'}\n"
    ],
    "outputs": [],
@@ -1336,12 +1328,13 @@
     "def create_lstm_model(hidden_act_name, hidden_act, output_act):\n",
     "    model = Sequential()\n",
     "    model.add(layers.Embedding(max_words, embedding_dim))\n",
-    "    model.add(layers.LSTM(LSTM_units, dropout=0.5))\n",
+    "    model.add(layers.LSTM(LSTM_units, dropout=dropout))\n",
     "    model.add(layers.Dense(hidden_units, activation=hidden_act))\n",
-    "    if hidden_act_name == 'ReLU+BatchNorm':\n",
-    "            model.add(BatchNormalization())\n",
+    "    model.add(layers.Dense(hidden_units, activation=hidden_act))\n",
+    "    model.add(layers.Dense(hidden_units, activation=hidden_act))\n",
     "    model.add(layers.Dense(1, activation=output_act))\n",
-    "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    optimizer = Adam(learning_rate=learning_rate)\n",
+    "    model.compile(optimizer=optimizer, loss='binary_crossentropy', metrics=['accuracy'])\n",
     "    return model"
    ],
    "outputs": [],
