--- a/Test-data-processing.ipynb
+++ b/Test-data-processing.ipynb
@@ -61,12 +61,12 @@
    "metadata": {
     "id": "YeuAheYyhdZw",
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:51:34.771806Z",
-     "start_time": "2025-03-23T09:51:34.763096Z"
+     "end_time": "2025-03-23T18:08:39.260732Z",
+     "start_time": "2025-03-23T18:08:39.243595Z"
     }
    },
    "outputs": [],
-   "execution_count": 579
+   "execution_count": 615
   },
   {
    "cell_type": "markdown",
@@ -84,8 +84,8 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:51:34.789012Z",
-     "start_time": "2025-03-23T09:51:34.782706Z"
+     "end_time": "2025-03-23T18:08:39.288137Z",
+     "start_time": "2025-03-23T18:08:39.280514Z"
     }
    },
    "outputs": [
@@ -106,13 +106,13 @@
      ]
     }
    ],
-   "execution_count": 580
+   "execution_count": 616
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:51:34.812572Z",
-     "start_time": "2025-03-23T09:51:34.808460Z"
+     "end_time": "2025-03-23T18:08:39.309227Z",
+     "start_time": "2025-03-23T18:08:39.300905Z"
     }
    },
    "cell_type": "code",
@@ -130,7 +130,7 @@
      ]
     }
    ],
-   "execution_count": 581
+   "execution_count": 617
   },
   {
    "cell_type": "code",
@@ -139,7 +139,7 @@
     "userPattern = '@[^\\s]+'\n",
     "# 去除标点符号，保留'\n",
     "punctuationPattern = r\"[^\\w\\s']|(?<!\\w)n\\'t\"\n",
-    "def process_tweets_not_del_stopw(tweet):\n",
+    "def process_tweets_no_negation_stopword_handling(tweet):\n",
     "  # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    # tweet=tweet[1:]\n",
@@ -163,7 +163,7 @@
     "        finalwords.append(word)\n",
     "    return ' '.join(finalwords)\n",
     "\n",
-    "def process_tweets_negation_del_stopword(tweet):\n",
+    "def process_tweets_negation_stopword_handling_fix(tweet):\n",
     "    # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    #tweet=tweet[1:]\n",
@@ -215,9 +215,9 @@
     "            # 名词词性还原（根据任务需求）\n",
     "            word = wordLemm.lemmatize(word, pos='n')\n",
     "            finalwords.append(word)\n",
-    "    return finalwords\n",
+    "    return ' '.join(finalwords)\n",
     "\n",
-    "def process_tweets_negation_append_fix(tweet):\n",
+    "def process_tweets_negation_handling_fix(tweet):\n",
     "    # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    #tweet=tweet[1:]\n",
@@ -242,6 +242,7 @@
     "    # --- 处理其他撇号为空格（如I'll → I ll）---\n",
     "    tweet = re.sub(r\"'\", ' ', tweet)\n",
     "    print(f\"tweet: {tweet}\")\n",
+    "\n",
     "    #tokenizing words\n",
     "    tokens = word_tokenize(tweet)\n",
     "    # Remove punctuations but remain ‘n't’\n",
@@ -258,14 +259,14 @@
     "            # 名词词性还原（根据任务需求）\n",
     "            word = wordLemm.lemmatize(word, pos='n')\n",
     "            finalwords.append(word)\n",
-    "    return finalwords\n",
+    "    return ' '.join(finalwords)\n",
     "\n",
     "# 数据处理方法有点问题，tweet = tweet.translate(str.maketrans(\"\",\"\",string.punctuation))\n",
     "# 去除了标点符号，导致带有'n't'的否定词无法被识别为negative word，\n",
     "# 如何修复既能识别到带有'n't'的否定词，又能去除其它标点符号\n",
     "# 还需要注意类似I'll要改为I ll\n",
-    "def process_tweets_negation_append(tweet):\n",
-    "  # Lower Casing\n",
+    "def process_tweets_negation_handling(tweet):\n",
+    "   # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    #tweet=tweet[1:]\n",
     "    # Removing all URls\n",
@@ -302,7 +303,7 @@
     "\n",
     "# punctuations处理会让\"didn't\" 变成 \"didnt\"，这不在stopword的否定词（didn,didn't），可以留下\n",
     "# punctuations处理会让\"i'll\" 变成 \"ill\" 和其它单词混淆\n",
-    "def process_tweets_remain_negation(tweet):\n",
+    "def process_tweets_negation_stopword_handling(tweet):\n",
     "    # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    #tweet=tweet[1:]\n",
@@ -334,7 +335,7 @@
     "        finalwords.append(word)\n",
     "    return ' '.join(finalwords)\n",
     "\n",
-    "def process_tweets_del_stopw(tweet):\n",
+    "def process_tweets_stopword_handling(tweet):\n",
     "  # Lower Casing\n",
     "    tweet = tweet.lower()\n",
     "    # tweet=tweet[1:]\n",
@@ -360,12 +361,12 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:51:34.875530Z",
-     "start_time": "2025-03-23T09:51:34.856609Z"
+     "end_time": "2025-03-23T18:08:39.394981Z",
+     "start_time": "2025-03-23T18:08:39.372851Z"
     }
    },
    "outputs": [],
-   "execution_count": 582
+   "execution_count": 618
   },
   {
    "cell_type": "code",
@@ -385,12 +386,12 @@
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:51:34.887979Z",
-     "start_time": "2025-03-23T09:51:34.885020Z"
+     "end_time": "2025-03-23T18:08:39.432519Z",
+     "start_time": "2025-03-23T18:08:39.428374Z"
     }
    },
    "outputs": [],
-   "execution_count": 583
+   "execution_count": 619
   },
   {
    "cell_type": "code",
@@ -404,14 +405,14 @@
     "    \"They ain't happy with the service at all.\"\n",
     "]\n",
     "\n",
-    "processed_test_text = [process_tweets_negation_del_stopword(x) for x in test_tweets]\n",
+    "processed_test_text = [process_tweets_negation_handling_fix(x) for x in test_tweets]\n",
     "print(\"预处理后的数据:\", processed_test_text)\n",
     "tokenizer(max_words, processed_test_text)"
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-23T09:51:34.907177Z",
-     "start_time": "2025-03-23T09:51:34.901367Z"
+     "end_time": "2025-03-23T18:08:39.477035Z",
+     "start_time": "2025-03-23T18:08:39.468839Z"
     }
    },
    "outputs": [
@@ -420,29 +421,25 @@
      "output_type": "stream",
      "text": [
       "tweet: aww  just will not got home from church he does not go today\n",
-      "before removing stopword tokens: ['aww', 'just', 'will', 'not', 'got', 'home', 'from', 'church', 'he', 'does', 'not', 'go', 'today']\n",
-      "after removing stopword tokens: ['aww', 'not', 'got', 'home', 'church', 'not', 'go', 'today']\n",
+      "tokens: ['aww', 'just', 'will', 'not', 'got', 'home', 'from', 'church', 'he', 'does', 'not', 'go', 'today']\n",
       "tweet: you are not happy with the tables at all\n",
-      "before removing stopword tokens: ['you', 'are', 'not', 'happy', 'with', 'the', 'tables', 'at', 'all']\n",
-      "after removing stopword tokens: ['not', 'happy', 'tables']\n",
+      "tokens: ['you', 'are', 'not', 'happy', 'with', 'the', 'tables', 'at', 'all']\n",
       "tweet: i ll might not come back website at \n",
-      "before removing stopword tokens: ['i', 'll', 'might', 'not', 'come', 'back', 'website', 'at']\n",
-      "after removing stopword tokens: ['might', 'not', 'come', 'back', 'website']\n",
+      "tokens: ['i', 'll', 'might', 'not', 'come', 'back', 'website', 'at']\n",
       "tweet: they is not happy with the service at all\n",
-      "before removing stopword tokens: ['they', 'is', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']\n",
-      "after removing stopword tokens: ['not', 'happy', 'service']\n",
-      "预处理后的数据: [['aww', 'not', 'get', 'home', 'church', 'not', 'go', 'today'], ['not', 'happy', 'table'], ['might', 'not', 'come', 'back', 'website'], ['not', 'happy', 'service']]\n",
-      "单词表: {'not': 1, 'happy': 2, 'aww': 3, 'get': 4, 'home': 5, 'church': 6, 'go': 7, 'today': 8, 'table': 9, 'might': 10, 'come': 11, 'back': 12, 'website': 13, 'service': 14}\n",
-      "文本的单词索引序列: [[3, 1, 4, 5, 6, 1, 7, 8], [1, 2, 9], [10, 1, 11, 12, 13], [1, 2, 14]]\n",
+      "tokens: ['they', 'is', 'not', 'happy', 'with', 'the', 'service', 'at', 'all']\n",
+      "预处理后的数据: ['aww just will not get home from church he do not go today', 'you be not happy with the table at all', 'll might not come back website at', 'they be not happy with the service at all']\n",
+      "单词表: {'not': 1, 'at': 2, 'be': 3, 'happy': 4, 'with': 5, 'the': 6, 'all': 7, 'aww': 8, 'just': 9, 'will': 10, 'get': 11, 'home': 12, 'from': 13, 'church': 14, 'he': 15, 'do': 16, 'go': 17, 'today': 18, 'you': 19, 'table': 20, 'll': 21, 'might': 22, 'come': 23, 'back': 24, 'website': 25, 'they': 26, 'service': 27}\n",
+      "文本的单词索引序列: [[8, 9, 10, 1, 11, 12, 13, 14, 15, 16, 1, 17, 18], [19, 3, 1, 4, 5, 6, 20, 2, 7], [21, 22, 1, 23, 24, 25, 2], [26, 3, 1, 4, 5, 6, 27, 2, 7]]\n",
       "(4, 10)\n",
-      "填充后文本的单词索引序列: [[ 0  0  3  1  4  5  6  1  7  8]\n",
-      " [ 0  0  0  0  0  0  0  1  2  9]\n",
-      " [ 0  0  0  0  0 10  1 11 12 13]\n",
-      " [ 0  0  0  0  0  0  0  1  2 14]]\n"
+      "填充后文本的单词索引序列: [[ 1 11 12 13 14 15 16  1 17 18]\n",
+      " [ 0 19  3  1  4  5  6 20  2  7]\n",
+      " [ 0  0  0 21 22  1 23 24 25  2]\n",
+      " [ 0 26  3  1  4  5  6 27  2  7]]\n"
      ]
     }
    ],
-   "execution_count": 584
+   "execution_count": 620
   }
  ],
  "metadata": {
